--- a/index.html
+++ b/index.html
@@ -1,92 +1,88 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Divisiones con márgenes</title>
-<style>
-  html, body {
-    height: 100%; /* Asegura que el html y el body ocupen el 100% del alto de la pantalla */
-  }
-
-  .container {
-    display: flex;
-    flex-direction: column;
-    height: 100%; /* Asegura que el contenedor ocupe el 100% del alto disponible */
-    width: 100%; /* Asegura que el contenedor ocupe el 100% del ancho disponible */
-  }
-
-  .subcontainer {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-height: 300px;
-  }
-
-  .normal, .half {
-    background-color: #a34646;
-    margin: 1rem;
-    padding: 1rem;
-    box-sizing: border-box;
-    text-align: left;
-  }
-
-  .half {
-    width: 48%;
-  }
-
-  .reduced {
-    background-color: #000000;
-    margin: 0.5rem;
-    padding: 1rem;
-    box-sizing: border-box;
-    text-align: center;
-    color: white;
-  }
-
-  .reduced-bottom {
-    display: flex;
-  }
-
-  .column {
-    flex: 1;
-    margin: 0.5rem;
-    padding: 1rem;
-    box-sizing: border-box;
-    text-align: center;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Cuberto Web</title>
 </head>
 <body>
-  <div class="container">
-    <div class="normal"><h3>Mobile Development</h3><h1 style="color: turquoise;">Grow your business with mobile apps</h1></div>
-    <div class="subcontainer">
-      <div class="half">Div 2.1</div>
-      <div class="half">
-        Div 2.2
-        <img src="img/section-1-m.png" alt="Descripción de la imagen">
+<div class="fila">
+    <div  class="column-2 estilos titulo3">
+            <h4>Mobile Develope</h4>
+            <h1 class="titulo">Grow your business with mobile apps</h1>
     </div>
-      <div class="half">Div 3.1</div>
-      <div class="half">
-        Div 3.2
-        <img src="img/section-2-m.png" alt="Descripción de la imagen">
+</div>
+<div class="fila">
+    <div class="column-4 estilos">
+        <h1>Sleepiest</h1>
+        <h1 class="letra3">Helps millions fall asleep every night</h1>
+        <p>branding, desing, mobile, product</p>
+    </div> 
+    <div class="column-4 estilos">
+        <img src="img/section-1-m.png" alt="Seccion 1">
     </div>
-      <div class="half">Div 4.1</div>
-      <div class="half">
-        Div 4.2
-        <img src="img/section-3-m.png" alt="Descripción de la imagen">
+</div>
+    <div class="fila">
+        <div class="column-8 estilos ">
+           <img src="img/section-2-m.png" alt="Secccion 2">
+        </div> 
+        <div class="column-8 estilos">
+            <h1>uLesson</h1>
+            <h3 class="letra3">Online platform for distance learning</h3>
+            <p>web, mobile, product</p>
+        </div>
+</div>
+    <div class="fila">
+   <div class="column-5 estilos">
+            <h1>Genesis Vision</h1>
+            <h2 class="letra3">Private trust management and trading platform</h2>
+            <p>branding, design, experience, product</p>
+        </div>
+        <div class="column-5 estilos">
+           <img src="img/section-3-m.png" alt="Seccion 3">
+        </div>
+    </div>
+
+    <div class="fila">
+        <div  class="column-2 estilos titulo2">
+                    <h4 class="letra1 margen">Have an idea? Tell us about it</h4>
+        </div>
+</div>
+<div class="fila">
+<div class="column-6 estilos titulo2">
+    <p>Product</p>
+    <p>Features</p>
+    <p>Enterprise</p>
+    <p>Customer Stories</p>
+</div>
+    <div class="column-6 estilos titulo2">
+        <p>Platform</p>
+        <p>Developer API</p>
+        <p>Partners</p>
+        <p>Atom</p>
+        <p>Electron</p>
+    </div>
+    <div class="column-6 estilos titulo2">
+        <p>Support</p>
+        <p>Help</p>
+        <p>Community Forum</p>
+        <p>Learning Lab</p>
+        <p>Certifications</p>
+    </div>
+        <div class="column-6 estilos titulo2">
+            <p>Company</p>
+            <p>about</p>
+            <p>Blog</p>
+            <p>Careers</p>
+            <p>Press</p>
+        </div>
     </div>
     </div>
-    <div class="reduced">
-      Parte superior
-      <div class="reduced-bottom">
-        <div class="column">Columna 1</div>
-        <div class="column">Columna 2</div>
-        <div class="column">Columna 3</div>
-        <div class="column">Columna 4</div>
-      </div>
-    </div>
-  </div>
+                           
+                    
+</div>
 </body>
 </html>
 
