--- a/index.html
+++ b/index.html
@@ -1,88 +1,85 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Cuberto Web</title>
 </head>
 <body>
-<div class="fila">
-    <div  class="column-2 estilos titulo3">
-            <h4>Mobile Develope</h4>
-            <h1 class="titulo">Grow your business with mobile apps</h1>
-    </div>
-</div>
-<div class="fila">
-    <div class="column-4 estilos">
-        <h1>Sleepiest</h1>
-        <h1 class="letra3">Helps millions fall asleep every night</h1>
-        <p>branding, desing, mobile, product</p>
-    </div> 
-    <div class="column-4 estilos">
-        <img src="img/section-1-m.png" alt="Seccion 1">
-    </div>
-</div>
     <div class="fila">
-        <div class="column-8 estilos ">
-           <img src="img/section-2-m.png" alt="Secccion 2">
+        <div  class="columna1 estilos titulo3">
+            <h4>Mobile development</h4>
+            <h1 class="titulo">Grow your business with mobile apps</h1>
+        </div>
+    </div>
+    <div class="fila">
+        <div class="columna2 estilos">
+            <h1>Sleepiest</h1>
+            <h1 class="letra3">Helps millions fall asleep every night</h1>
+            <p>branding, design, mobile, product</p>
         </div> 
-        <div class="column-8 estilos">
+        <div class="columna2 estilos">
+            <img src="img/section-1-m.png" alt="Seccion1">
+        </div>
+    </div>
+    <div class="fila">
+        <div class="columna3 estilos ">
+           <img src="img/section-2-m.png" alt="Seccion2">
+        </div> 
+        <div class="columna3 estilos">
             <h1>uLesson</h1>
             <h3 class="letra3">Online platform for distance learning</h3>
             <p>web, mobile, product</p>
         </div>
-</div>
+    </div>
     <div class="fila">
-   <div class="column-5 estilos">
+        <div class="columna4 estilos">
             <h1>Genesis Vision</h1>
             <h2 class="letra3">Private trust management and trading platform</h2>
             <p>branding, design, experience, product</p>
         </div>
-        <div class="column-5 estilos">
-           <img src="img/section-3-m.png" alt="Seccion 3">
+        <div class="columna4 estilos">
+           <img src="img/section-3-m.png" alt="Seccion3">
         </div>
     </div>
 
     <div class="fila">
-        <div  class="column-2 estilos titulo2">
+        <div  class="columna1 estilos titulo2">
                     <h4 class="letra1 margen">Have an idea? Tell us about it</h4>
         </div>
-</div>
-<div class="fila">
-<div class="column-6 estilos titulo2">
-    <p>Product</p>
-    <p>Features</p>
-    <p>Enterprise</p>
-    <p>Customer Stories</p>
-</div>
-    <div class="column-6 estilos titulo2">
-        <p>Platform</p>
-        <p>Developer API</p>
-        <p>Partners</p>
-        <p>Atom</p>
-        <p>Electron</p>
     </div>
-    <div class="column-6 estilos titulo2">
-        <p>Support</p>
-        <p>Help</p>
-        <p>Community Forum</p>
-        <p>Learning Lab</p>
-        <p>Certifications</p>
-    </div>
-        <div class="column-6 estilos titulo2">
-            <p>Company</p>
-            <p>about</p>
+    <div class="fila">
+        <div class="columna5 estilos titulo2">
+            <p class="negrita">Product</p>
+            <p>Features</p>
+            <p>Security</p>
+            <p>Enterprise</p>
+            <p>Customer Stories</p>
+        </div>
+        <div class="columna5 estilos titulo2">
+            <p class="negrita">Platform</p>
+            <p>Developer API</p>
+            <p>Partners</p>
+            <p>Atom</p>
+            <p>Electron</p>
+        </div>
+        <div class="columna5 estilos titulo2">
+            <p class="negrita">Support</p>
+            <p>Help</p>
+            <p>Community Forum</p>
+            <p>Learning Lab</p>
+            <p>Certifications</p>
+        </div>
+        <div class="columna5 estilos titulo2">
+            <p class="negrita">Company</p>
+            <p>About</p>
             <p>Blog</p>
             <p>Careers</p>
             <p>Press</p>
         </div>
-    </div>
-    </div>
-                           
-                    
-</div>
+    </div>                  
 </body>
 </html>
 
